# baloon_calc

./: .gitignore  PROJECT_AUDIT.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_exe.bat
.github/workflows/: ci.yml
balloon/: __main__.py  constants.py  export_core.py  gui_main.py  settings.py  validators.py
balloon/analysis/: __init__.py  base.py  cost_analysis.py  flight_time.py  height_profile.py  material_comparison.py  optimal_height.py
balloon/export/: __init__.py  dxf_export.py  nesting.py  pdf_export.py  report_generator.py
balloon/gui/: __init__.py  matplotlib_3d_fallback.py  plotly_3d.py  shape_params_helper.py
balloon/model/: __init__.py  assumptions.py  mass_budget.py  shapes.py  solve.py
balloon/patterns/: __init__.py  base.py  pillow_pattern.py  profile_based.py
balloon/shapes/: __init__.py  profile.py  registry.py
baloon/: __init__.py  analysis.py  calculations.py  console.py  constants.py  export.py  gui.py  gui_main.py  help_texts.py  labels.py  main_improved.py  main_script.py  models.py  optimization.py  patterns.py  settings.py  shapes.py  utils.py  validators.py
baloon/analysis/: __init__.py  base.py  cost_analysis.py  flight_time.py  height_profile.py  material_comparison.py  optimal_height.py  report.py
baloon/gui/: __init__.py  dialogs.py  matplotlib_utils.py  pattern_viewer.py  pattern_visualization.py  plotly_3d.py  theme.py  visualization_3d.py  widgets.py
baloon/patterns/: __init__.py  base.py  cigar_pattern.py  pear_pattern.py  pillow_pattern.py  sphere_pattern.py
baloon/shapes/: __init__.py  cigar.py  cylinder.py  pear.py  pillow.py  sphere.py  torus.py
docs/: development.md  examples.md  index.md  installation.md  usage.md
docs/api/: calculations.md
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_calculations.py  test_export_dxf.py  test_export_nesting.py  test_export_pdf.py  test_lift_state.py  test_math_fixes.py  test_model_atmosphere.py  test_model_gas.py  test_model_mass_budget.py  test_model_materials.py  test_model_shapes.py  test_model_solve.py  test_patterns.py  test_shapes.py  test_shapes_profile.py  test_shapes_registry.py  test_validators.py
